Changes in tframe version 2011.11-1

   o	updated maintainer email address.

   o	fix to tfOnePlot for lost date information in univariate case.

Changes in tframe version 2011.8-1

   o	Removed ... argument from tfOnePlot, since it seems unnecessary.

   o	Added arguments par, lastObs, source, and footnote to tfOnePlot.

Changes in tframe version 2011.3-1

   o	Changed periods() and tfperiods() (distinction no longer needed) 
   	to Tobs() to avoid conflicts with other packages.

Changes in tframe version  2009.10-2

   o	Removed see also link to dse so the package builds without having to 
	check CRAN looking for existence of package dse.	


Changes in tframe version  2009.10-1

   o	Fixed a few documentation problems found by R-2.10.0 (beta) quality checks.

   o	Fixed splice to work with vector series (previously assumed matrices).


Changes in tframe version  2009.02-1

   o	Cleaned up tframe so that data classes are not defined unless absolutely
	necessary. Tframe now attempts to use methods from the data classes 
	where possible. (Classes for the tframe objects are still set when the 
	tframe is not attached to data.)

   o	Also, in line with trying to use methods for existing classes, 
	seriesNames() now uses dimnames[[2]] for matrices, and a class method if
	that is available. A "seriesNames" attribute is still set if there is
	no class methods available, as for vectors.

   o	Removed a try-error check for a condition that would never happen.

   o	Minor documentation corrections as found by a new R-devel.

   o	Made DESCRIPTION a file rather than building it.


Changes in tframe version  2008.5-1

   o	splits extensions for zoo and its as well as some new/experimental/less 
	stable pieces into package tframePlus.

   o	fixed bug in tfExpand which lost multivariate series.

   o	fixed bug in tsWrite which lost date.
    
   o	default nseries changed to return zero for NULL

Changes in tframe version  2007.5-1
