@@ -2,6 +2,11 @@ Changes in tframe version 2011.11-1
 
    o	updated maintainer email address.
 
+   o	added subtitle, footnoteLeft and footnoteRight.
+
+   o	restricted annualizedGrowth(), percentChange(), and ytoypc() to 
+   	work only on tframed objects.
+
    o	fix to tfOnePlot for lost date information in univariate case.
 
 Changes in tframe version 2011.8-1
